refactor(project-cleanup): standardize UI text to English and remove commented code
Stardardized all UI text to English for consistency.
Removed unnecessary commented-out code for cleaner codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -284,5 +284,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-# Imgs
-assets/Escultura*
+# code that might be use in a future
+src/App/futureModal
