--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^5.0.1",
+    "react-scripts": "^5.0.1",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,7 +34,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "gh-pages": "^6.1.1",
+    "typescript": "^4.9.5"
   },
   "homepage": "https://miguelnegron1.github.io/TodoList-React-App/"
 }
