--- a/.gitignore
+++ b/.gitignore
@@ -195,7 +195,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+**/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
@@ -286,3 +286,5 @@ dist
 .pnp.*
 # code that might be use in a future
 src/App/futureModal
+#env
+.env
