--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.8",
+    "cross-env": "^7.0.3",
     "gh-pages": "^6.1.1",
     "jest": "^27.5.1",
     "typescript": "^4.9.5",
